tests/netedit/demandelements/route/basic/invalid_vclass/output.netedit
TestFunctions: Netedit opened successfully
Finding reference
TestFunctions: 'reference.png' found. Position: 304 - 168
dummyVClass
TestFunctions: Clicked over position 754 - 608
TestFunctions: Clicked over position 654 - 418
bus
TestFunctions: Clicked over position 754 - 608
TestFunctions: Clicked over position 654 - 418
TestFunctions: Clicked over position 304 - 168
TestFunctions: Clicked over position 304 - 168
TestFunctions: Netedit closed successfully
